Migrated to Java 17.